# Euclid

./: .gitignore  3rd-party-dependencies.txt  CMakeLists.txt  DEPENDENCY-INFOS.txt  New Text Document.txt  Readme.md  Readme.txt  TODOs.txt  cmake-VS14-x64-build-command.txt  config.ini  createVS2017Build.bat  createVS2019Build.bat  glfwOLDMAIN.txt  oldDrawMethod.txt
lib/boxer/: CMakeLists.txt
lib/boxer/src/: boxer_linux.cpp  boxer_osx.mm  boxer_win.cpp
projects/: CMakeLists.txt
projects/app/: CMakeLists.txt  Globals.cpp  Globals.hpp  Main.cpp  Main.hpp  MainLoopTask.cpp  MainLoopTask.hpp  NeXEngine.cpp  NeXEngine.hpp  PBR_Deferred_MainLoopTask.cpp  PBR_Deferred_MainLoopTask.hpp  PBR_MainLoopTask.cpp  PBR_MainLoopTask.hpp  pch_app.hpp
projects/app/gui/: AppStyle.cpp  AppStyle.hpp  ConfigurationWindow.cpp  ConfigurationWindow.hpp  Controller.cpp  Controller.hpp  NodeEditor.cpp  NodeEditor.hpp  ProbeGenerator.cpp  ProbeGenerator.hpp  ProbeGeneratorView.cpp  ProbeGeneratorView.hpp  SceneGUI.cpp  SceneGUI.hpp  TextureViewer.cpp  VobLoader.cpp  VobLoader.hpp
projects/app/include/: EngineTester.hpp  MainLoopTask.hpp  PBR.hpp  PBR_MainLoopTask.hpp  pch_app.hpp
projects/app/pbr_deferred/: HeightMap.cpp  HeightMap.hpp  Ocean.cpp  Ocean.hpp  PBR_Deferred_MainLoopTask.cpp  PBR_Deferred_MainLoopTask.cpp~RFf975e0.TMP  PBR_Deferred_MainLoopTask.hpp  PBR_Deferred_Renderer.cpp  PBR_Deferred_Renderer.hpp  SceneNearFarComputeShader.cpp  TesselationTest.cpp  TesselationTest.hpp
projects/app/src/: EngineTestMain.cpp  EngineTester.cpp  Main.cpp  MainLoopTask.cpp  PBR.cpp  PBR_MainLoopTask.cpp
projects/app/techniques/: GlobalIllumination.cpp  GlobalIllumination.hpp  HeightMap.cpp  HeightMap.hpp  Ocean.cpp  Ocean.hpp  PBR_Deferred_Renderer.cpp  PBR_Deferred_Renderer.hpp  TesselationTest.cpp  TesselationTest.hpp
projects/app/ui_mode/: UI_Mode.hpp  UI_ModeStateMachine.cpp  UI_ModeStateMachine.hpp
projects/compute_test/: CMakeLists.txt  Globals.hpp  Main.cpp  NeXEngine.cpp  NeXEngine.hpp  VideoConfig.cpp  VideoConfig.hpp  pch_compute_test.hpp
projects/compute_test/gui/: AppStyle.cpp  ConfigurationWindow.cpp  ConfigurationWindow.hpp  Controller.cpp  Controller.hpp  SceneGUI.hpp
projects/compute_test/pbr_deferred/: PBR_Deferred_Renderer.cpp  PBR_Deferred_Renderer.hpp
projects/compute_test/renderer/: ComputeTest_Renderer.cpp  ComputeTest_Renderer.hpp  SceneNearFarComputeShader.cpp  SceneNearFarComputeShader.hpp
projects/engine/: CMakeLists.txt  pch_engine.hpp
projects/engine/antialiasing/: SMAA.hpp
projects/engine/camera/: Camera.cpp  Camera.hpp  FPCamera.hpp  FPQuaternionCamera.hpp  TrackballCamera.hpp  TrackballQuatCamera.cpp  TrackballQuatCamera.hpp
projects/engine/drawing/: ModelDrawer.hpp
projects/engine/gui/: Controller.hpp  ControllerStateMachine.cpp  ControllerStateMachine.hpp  Drawable.hpp  Menu.cpp  Menu.hpp  SceneGUI.cpp  SceneGUI.hpp  Style.hpp  UI_Mode.hpp  UI_ModeStateMachine.cpp  UI_ModeStateMachine.hpp  Util.cpp  View.hpp
projects/engine/include/: pch_engine.hpp
projects/engine/light/: Light.cpp
projects/engine/material/: AbstractMaterialLoader.cpp  AbstractMaterialLoader.hpp  BlinnPhongMaterial.hpp  BlinnPhongMaterialLoader.cpp  BlinnPhongMaterialLoader.hpp  PbrMaterial.hpp  PbrMaterialLoader.cpp  PbrMaterialLoader.hpp
projects/engine/mesh/: Mesh.cpp  Mesh.hpp  SampleMeshes.hpp
projects/engine/model/: Model.hpp  ModelManager.cpp
projects/engine/nex/: EffectLibrary.cpp  EffectLibrary.hpp  FileSystem.cpp  FileSystem.hpp  Input.cpp  Input.hpp  RenderBackend.hpp  RenderTypes.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneNode.cpp  SceneNode.hpp  SubSystemProvider.hpp  Window.cpp  Window.hpp
projects/engine/post_processing/: HBAO.cpp  HBAO.hpp  SSAO.cpp  SSAO.hpp
projects/engine/renderer/: AbstractRendererFactory.hpp  Renderer3D.hpp
projects/engine/scene/: SceneNode.cpp  SceneNode.hpp
projects/engine/shader/: PBRShader.hpp  ScreenShader.hpp  Shader.cpp  Shader.hpp  SimpleColorShader.hpp  SkyBoxShader.hpp
projects/engine/shading_model/: PBR.cpp  PBR.hpp  PBR_Deferred.cpp  PBR_Deferred.hpp  ShadingModelFactory.cpp  ShadingModelFactory.hpp
projects/engine/sprite/: Sprite.hpp
projects/engine/src/: Main.cpp
projects/engine/system/: Configuration.cpp  Configuration.hpp  Engine.cpp  Engine.hpp  System.cpp  System.hpp  Video.cpp  Video.hpp
projects/engine/texture/: Texture.cpp  Texture.hpp  TextureManager.hpp
projects/engine/util/: FPSCounter.hpp  Math.hpp  Projectional.cpp  Projectional.hpp  Timer.hpp
projects/engine_opengl/: CMakeLists.txt  pch_engine_opengl.hpp
projects/engine_opengl/antialiasing/: SMAA_GL.cpp
projects/engine_opengl/drawing/: ModelDrawerGL.cpp  ModelDrawerGL.hpp
projects/engine_opengl/gui/: ImGUI_GL.cpp  ImGUI_GL.hpp  NanoGUI.cpp  NanoGUI.hpp
projects/engine_opengl/mesh/: MeshFactoryGL.cpp
projects/engine_opengl/model/: AssimpModelLoader.cpp  AssimpModelLoader.hpp  ModelGL.cpp  ModelGL.hpp  ModelManagerGL.cpp  ModelManagerGL.hpp
projects/engine_opengl/post_processing/: HBAO_GL.cpp  HBAO_GL.hpp  SSAO_GL.cpp  SSAO_GL.hpp
projects/engine_opengl/renderer/: RendererOpenGL.cpp  RendererOpenGL.hpp
projects/engine_opengl/shader/: DepthMapShaderGL.cpp  DepthMapShaderGL.hpp  PBRShaderGL.cpp  PBRShaderGL.hpp  PhongTexShaderGL.cpp  ShaderGL.cpp  ShaderGL.hpp  ShaderManagerGL.cpp  ShaderManagerGL.hpp  ShadowShaderGL.cpp  ShadowShaderGL.hpp  SimpleExtrudeShaderGL.hpp  SkyBoxShaderGL.cpp  SkyBoxShaderGL.hpp
projects/engine_opengl/shading_model/: PBR_DeferredGL.cpp  PBR_DeferredGL.hpp  ShadingModelFactoryGL.cpp  ShadingModelFactoryGL.hpp
projects/engine_opengl/texture/: ImageLoaderGL.cpp  (+4 more)
projects/engine_test/: CMakeLists.txt
projects/euclid/: CMakeLists.txt  Euclid.cpp  Euclid.hpp  EuclidRenderer.cpp  EuclidRenderer.hpp  Globals.cpp  Globals.hpp  Main.cpp  NeXEngine.cpp  NeXEngine.hpp  PBR_Deferred_Renderer.cpp  PBR_Deferred_Renderer.hpp  VideoConfig.cpp  pch_euclid.hpp
projects/platform/: CMakeLists.txt  pch_platform.hpp
projects/platform_test/: CMakeLists.txt
projects/test/: CMakeLists.txt
(+1536 files in other folders)
